# powdrr-engine

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  s3download.sh
.config/: nextest.toml
benchmark/: Cargo.toml  README.md
benchmark/src/: main.rs  okta_system_log_1.json  okta_system_log_2.json  okta_system_log_3.json  okta_system_log_4.json
cli/: Cargo.toml  README.md
cli/src/: main.rs
clients/: duckdb_example.py  query.json  run_query.sh  test_client.py  test_query.py
control_plane/: Cargo.toml  README.md
control_plane/src/: checkpoint_descriptor.rs  data_contract.rs  expression_evaluator.rs  lib.rs  painless_parser.rs  pipeline.rs  schema_massager.rs  service_api_error.rs  test_api.rs
dev_stack/: README.md  compose.yaml
docs/: README.md  architecture.md  cross-protocol-serving-optimization-plan.md  dynamodb-compatibility-matrix.md  elastic-table-assumptions.md  es-compatibility-matrix.md  repo-map.md  (+20 more)
engine/: Cargo.toml  README.md
engine/src/: configuration.rs  main.rs
engine_lib/: Cargo.toml
engine_lib/src/: lib.rs  peers.rs
iceberg_lib/: Cargo.toml
iceberg_lib/src/: iceberg.rs
iceberg_lib/tests/data/: simple_1.json
main_lib/: Cargo.toml  compose.yaml
main_lib/src/: compaction.rs  data_access.rs  data_contract.rs  data_fusion_functions.rs  distributed_cache.rs  dynamodb.rs  dynamodb_protocol.rs  dynamodb_service_impl.rs  dynamodb_state_provider.rs  elastic_search_cluster_info.rs  elastic_search_commands.rs  elastic_search_common.rs  elastic_search_datetime_parser.rs  elastic_search_endpoints.rs  elastic_search_index.rs  elastic_search_ingest.rs  elastic_search_lifetime_policy.rs  elastic_search_parser.rs  elastic_search_pipeline.rs  elastic_search_responses.rs  elastic_search_storage_schema.rs  elastic_table_validation.rs  ephemeral_fetch_tracker.rs  ephemeral_service_impl.rs  ephemeral_state_provider.rs  expression_evaluator.rs  lakehouse_serving.rs  leaderless_state_provider.rs  lib.rs  local_cli.rs  metadata_store.rs  mongodb_protocol.rs  mongodb_wire_protocol.rs  painless_parser.rs  peers.rs  pipeline.rs  prefetch.rs  private_api.rs  query_execution.rs  query_path.rs  (+15 more)
main_lib/tests/: dynamodb_compatibility_matrix.rs  dynamodb_sdk_compat.rs  elasticsearch_js_client_compat.rs  es_compatibility_matrix.rs  local_cli_analyze.rs  mongodb_wire_compat.rs
main_lib/tests/data/: dynamodb_compat_cases.json  es_api_coverage_manifest.json  es_compat_cases.json  flights.parquet  logs.json  logs_search_index.parquet  okta_system_log_1.json  okta_system_log_3.json  okta_system_log_4.json
query_core/: Cargo.toml  README.md
query_core/src/: data_contract.rs  elastic_search_api_types.rs  elastic_search_datetime_parser.rs  elastic_table_validation.rs  lib.rs  pipeline.rs  query_path.rs  read_plan.rs  schema_massager.rs  search_plan.rs  serving_plan.rs  state_common.rs
query_lib/: Cargo.toml  README.md
query_lib/src/: compaction.rs  data_access.rs  distributed_cache.rs  dynamodb.rs  dynamodb_service_impl.rs  elastic_search_commands.rs  elastic_search_common.rs  elastic_search_index.rs  elastic_search_ingest.rs  elastic_search_parser.rs  ephemeral_fetch_tracker.rs  lakehouse_serving.rs  lib.rs  local_cli.rs  metadata_store.rs  painless_parser.rs  peers.rs  private_api.rs  query_execution.rs  search_executor.rs  search_runtime.rs  serving_dataset.rs  serving_protocol.rs  speedboat_buffer.rs  state_provider.rs  test_api.rs
query_runtime/: Cargo.toml  README.md
query_runtime/src/: compaction.rs  distributed_cache.rs  dynamodb.rs  dynamodb_service_impl.rs  dynamodb_state_provider.rs  elastic_search_index.rs  elastic_search_ingest.rs  elastic_search_parser.rs  elastic_search_pipeline.rs  elastic_search_responses.rs  elastic_search_storage_schema.rs  ephemeral_service_impl.rs  ephemeral_state_provider.rs  expression_evaluator.rs  lakehouse_serving.rs  leaderless_state_provider.rs  lib.rs  metadata_store.rs  peers.rs  prefetch.rs  private_api.rs  runtime_bindings.rs  search_executor.rs  search_runtime.rs  state_provider.rs  test_api.rs  util.rs
query_runtime/tests/: local_cli_analyze.rs
query_server/: Cargo.toml  README.md
query_server/src/: dynamodb_protocol.rs  elastic_search_endpoints.rs  elastic_search_http_types.rs  elastic_search_lifetime_policy.rs  exact_lookup.rs  lakehouse_serving_endpoints.rs  lib.rs  mongodb_protocol.rs  redis_protocol.rs  redis_wire_protocol.rs  router.rs  support_protocol.rs  test_api_endpoints.rs
query_server/tests/: dynamodb_compatibility_matrix.rs  dynamodb_sdk_compat.rs  elasticsearch_js_client_compat.rs  es_compatibility_matrix.rs  mongodb_wire_compat.rs  redis_wire_compat.rs
service/: Cargo.toml  README.md  compose.yaml
service/ca/: ca.crt  ca.key
service/src/: checkpoint_updater.rs  compaction.rs  data_access.rs  data_fusion_functions.rs  distributed_cache.rs  dynamodb.rs  dynamodb_service_impl.rs  elastic_search_aggregation_processor.rs  elastic_search_cluster_info.rs  elastic_search_commands.rs  elastic_search_common.rs  elastic_search_datetime_parser.rs  elastic_search_endpoints.rs  elastic_search_index.rs  elastic_search_ingest.rs  elastic_search_lifetime_policy.rs  elastic_search_parser.rs  elastic_search_pipeline.rs  elastic_search_responses.rs  elastic_search_storage_schema.rs  expression_evaluator.rs  json_loader.rs  main.rs  painless_parser.rs  pipeline.rs  private_api.rs  raft_handlers.rs  response.rs  router.rs  schema_massager.rs  service_impl_provider.rs  state_hosted_service.rs  state_leader.rs  state_peers.rs  support_surface_config.rs  test_api.rs  v1_handlers.rs
service/tests/data/: flights_search_index.parquet  logs.json  logs_search_index.parquet  okta_system_log_4.json  search_query_1.json
service_lib/: Cargo.toml  README.md
service_lib/src/: data_contract.rs  dynamodb.rs  dynamodb_service_impl.rs  elastic_search_lifetime_policy.rs  ephemeral_service_impl.rs  expression_evaluator.rs  lib.rs  metadata_store.rs  peers.rs  pipeline.rs  raft_service_impl.rs  read_only_coordination.rs  schema_massager.rs  state_provider.rs  test_api.rs
(+185 files in other folders)
