[workspace]
resolver = "2"
members = [
    "benchmark",
    "cli",
    "control_plane",
    "engine",
    "query_core",
    "query_lib",
    "query_runtime",
    "query_server",
    "service",
    "service_lib",
]
default-members = ["cli", "engine", "service"]


[workspace.package]
version = "0.0.1"
edition = "2024"


[profile.release]
opt-level = 3
