[package]
name = "powdrr-benchmark"
description = "Powdrr.io Benchmarking Tool"
keywords = ["arrow", "query", "sql"]
publish = false
readme = "README.md"
version.workspace = true
edition.workspace = true


[dependencies]
futures = "0.3.31"
reqwest = { version = "0.12.22", features = ["blocking"] }
tokio = "1.45.1"
