[package]
name = "powdrr-benchmark"
description = "Powdrr.io Benchmarking Tool"
keywords = ["arrow", "query", "sql"]
publish = false
readme = "README.md"
version.workspace = true
edition.workspace = true


[dependencies]
chrono = "0.4.41"
futures = "0.3.31"
idgenerator = "2.0.0"
rand = "0.9.1"
reqwest = { version = "0.12.22", features = ["blocking"] }
tokio = "1.45.1"
serde_json = "1.0.140"
