[package]
name = "powdrr-benchmark"
description = "Powdrr.io Benchmarking Tool"
keywords = ["arrow", "query", "sql"]
publish = false
readme = "README.md"
version.workspace = true
edition.workspace = true


[dependencies]
anyhow = "1.0.100"
chrono = "0.4.41"
futures = "0.3.31"
gotham = { version = "0.7.4", features = ["rustls"] }
idgenerator = "2.0.0"
mime = "0.3.17"
mongodb = "3.3.0"
powdrr-query-lib = { path = "../query_lib" }
powdrr-query-runtime = { path = "../query_runtime" }
powdrr-query-server = { path = "../query_server" }
rand = "0.9.1"
reqwest = { version = "0.12.22", features = ["blocking"] }
tokio = "1.45.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
