[package]
name = "powdrr-cli"
description = "Powdrr.io CLI"
keywords = ["arrow", "query", "sql"]
publish = false
readme = "README.md"
version.workspace = true
edition.workspace = true


[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
powdrr-query-lib = { path = "../query_lib" }
serde_json = "1.0.140"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
