[package]
name = "powdrr-io-engine"
description = "Powdrr.io Engine"
keywords = ["arrow", "query", "sql"]
publish = false
readme = "README.md"
version.workspace = true
edition.workspace = true


[dependencies]
gotham = { version = "0.7.4", features = ["rustls"] }
idgenerator = "2.0.0"
powdrr-engine-lib = { path = "../engine_lib" }
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.12.0"
tracing-subscriber = "0.3.19"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal", "time"] }
rustls = "0.23.28"
