[package]
name = "iceberg_lib"
version.workspace = true
edition.workspace = true

[dependencies]
arrow-array = "54.2.0"
arrow-json = "54.2.0"
arrow-schema = "54.2.0"
futures = "0.3.31"
iceberg = { path = "../../iceberg-rust/crates/iceberg" }
iceberg-catalog-rest = { path = "../../iceberg-rust/crates/catalog/rest" }
idgenerator = "2.0.0"
parquet = "54.2.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
