[package]
name = "iceberg_lib"
version.workspace = true
edition.workspace = true

[dependencies]
arrow-array = "55.2.0"
arrow-json = "55.2.0"
arrow-schema = "55.2.0"
futures = "0.3.31"
iceberg = { path = "../../iceberg-rust/crates/iceberg" }
iceberg-catalog-rest = { path = "../../iceberg-rust/crates/catalog/rest" }
# iceberg = "0.6.0"
# iceberg-catalog-rest = "0.6.0"
idgenerator = "2.0.0"
parquet = "55.2.0"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
