[package]
name = "iceberg_lib"
version.workspace = true
edition.workspace = true

[dependencies]
arrow-array = "55.2.0"
arrow-json = "55.2.0"
arrow-schema = "55.2.0"
futures = "0.3.31"
iceberg = { git = "https://github.com/apache/iceberg-rust", rev = "145afdf4b553e0f1b79d27b6cbf9b3af04f87e4e" }
iceberg-catalog-rest = { git = "https://github.com/apache/iceberg-rust", rev = "145afdf4b553e0f1b79d27b6cbf9b3af04f87e4e" }
# iceberg = "0.6.0"
# iceberg-catalog-rest = "0.6.0"
idgenerator = "2.0.0"
parquet = "55.2.0"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
