
[package]
name = "powdrr_lib"
description = "Powdrr.io Main Library"
keywords = ["arrow", "query", "sql"]
publish = false
readme = "README.md"
version.workspace = true
edition.workspace = true


[dependencies]
arrow-flight = "55.2"
arrow-json = "55.2"
async-trait = "0.1.88"
chrono = "0.4.41"
datafusion = "47"
flamegraph = "0.6.8"
futures = "0.3.31"
futures-util = "0.3.31"
gotham = { version = "0.7.4", features = ["rustls"] }
http = "0.2.12"
iceberg = { path = "../../iceberg-rust/crates/iceberg" }
iceberg-catalog-rest = { path = "../../iceberg-rust/crates/catalog/rest" }
idgenerator = "2.0.0"
lru-mem = "0.3.0"
minijinja = "2.10.2"
object_store = { version = "0.12.3", features = ["aws", "gcp", "azure", "http"] }
prost = "0.13.5"
redis = "0.30.0"
reqwest = { version = "0.12.14", features = ["json", "blocking"] }
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.12.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ttl_cache = "0.5.1"
url = "2.5.4"
url-escape = "0.1.1"
uuid-b64 = "0.2.0"

