
[package]
name = "powdrr_lib"
description = "Powdrr.io Main Library"
keywords = ["arrow", "query", "sql"]
publish = false
readme = "README.md"
version.workspace = true
edition.workspace = true


[dependencies]
arrow-flight = "55.1"
arrow-json = "55.1"
async-trait = "0.1.88"
aws-config = "1.8.3"
aws-credential-types = "1.2.4"
aws-sdk-dynamodb = "1.86.0"
chrono = "0.4.41"
datafusion = "47"
flamegraph = "0.6.8"
futures = "0.3.31"
futures-util = "0.3.31"
gotham = { version = "0.7.4", features = ["rustls"] }
http = "0.2.12"
iceberg = { git = "https://github.com/apache/iceberg-rust", rev = "145afdf4b553e0f1b79d27b6cbf9b3af04f87e4e" }
iceberg-catalog-rest = { git = "https://github.com/apache/iceberg-rust", rev = "145afdf4b553e0f1b79d27b6cbf9b3af04f87e4e" }
idgenerator = "2.0.0"
liquid-cache-parquet = "0.1.7"
lru-mem = "0.3.0"
minijinja = "2.10.2"
modyne = "0.3.0"
modyne-derive = "0.3.0"
object_store = { version = "0.12.3", features = ["aws", "gcp", "azure", "http"] }
paste = "1.0.15"
prost = "0.13.5"
redis = "0.30.0"
reqwest = { version = "0.12.14", features = ["json", "blocking"] }
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.12.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_arrow = { version = "0.13.4", features = ["arrow-55"] }
serde_dynamo = "4.2.14"
serde_json = "1.0.140"
tempfile = "3.20.0"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ttl_cache = "0.5.1"
url = "2.5.4"
url-escape = "0.1.1"
uuid-b64 = "0.2.0"
lazy_static = "1.5.0"
