
[package]
name = "powdrr_lib"
description = "Powdrr.io Main Library"
keywords = ["arrow", "query", "sql"]
publish = false
readme = "README.md"
version.workspace = true
edition.workspace = true
autotests = false

[features]
integration-tests = []


[dependencies]
datafusion = "53.1.0"
futures-util = "0.3.31"
idgenerator = "2.0.0"
object_store = { version = "0.13.2", default-features = false, features = ["aws", "http"] }
powdrr-query-lib = { path = "../query_lib" }
powdrr-query-server = { path = "../query_server" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
aws-config = "1.8.3"
aws-credential-types = "1.2.4"
aws-sdk-dynamodb = "1.86.0"
chrono = "0.4.41"
gotham = { version = "0.7.4", features = ["rustls"] }
hmac = "0.12.1"
mongodb = "3.3.0"
reqwest = { version = "0.12.14", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde_dynamo = "4.2.14"
sha2 = "0.10.9"
tempfile = "3.23.0"
tokio = { version = "1.0", features = ["io-util", "net", "rt-multi-thread", "sync", "time"] }
url = "2.5.4"

[[test]]
name = "local_cli_analyze"
path = "tests/local_cli_analyze.rs"

[[test]]
name = "es_compatibility_matrix"
path = "tests/es_compatibility_matrix.rs"
required-features = ["integration-tests"]

[[test]]
name = "dynamodb_sdk_compat"
path = "tests/dynamodb_sdk_compat.rs"
required-features = ["integration-tests"]

[[test]]
name = "dynamodb_compatibility_matrix"
path = "tests/dynamodb_compatibility_matrix.rs"

[[test]]
name = "elasticsearch_js_client_compat"
path = "tests/elasticsearch_js_client_compat.rs"
required-features = ["integration-tests"]
