
[package]
name = "powdrr-query-lib"
description = "Powdrr.io shared query/runtime library"
keywords = ["arrow", "query", "sql"]
publish = false
readme = "../README.md"
version.workspace = true
edition.workspace = true

[dependencies]
arrow-flight = "58.0.0"
arrow-array-55 = { package = "arrow-array", version = "55.1.0" }
arrow-ipc = "58.0.0"
arrow-ipc-55 = { package = "arrow-ipc", version = "55.1.0" }
arrow-json = "58.0.0"
async-trait = "0.1.88"
aws-config = { version = "1.8.3" }
aws-credential-types = { version = "1.2.4" }
aws-sdk-dynamodb = { version = "1.86.0" }
bson = "2.15.0"
chrono = "0.4.41"
datafusion = "53.1.0"
futures = "0.3.31"
futures-util = "0.3.31"
gotham = { version = "0.7.4", features = ["rustls"] }
hmac = "0.12.1"
http = "0.2.12"
iceberg = { git = "https://github.com/apache/iceberg-rust", rev = "145afdf4b553e0f1b79d27b6cbf9b3af04f87e4e" }
iceberg-catalog-rest = { git = "https://github.com/apache/iceberg-rust", rev = "145afdf4b553e0f1b79d27b6cbf9b3af04f87e4e" }
idgenerator = "2.0.0"
k8s-openapi = { version = "0.25.0", features = ["latest"] }
kube = { version = "1.1.0", features = ["runtime", "derive"] }
lru-mem = "0.3.0"
minijinja = "2.10.2"
modyne = { version = "0.3.0" }
modyne-derive = { version = "0.3.0" }
mime = "0.3.17"
object_store = { version = "0.13.2", default-features = false, features = ["aws", "http"] }
paste = "1.0.15"
parquet-55 = { package = "parquet", version = "55.1.0" }
powdrr-control-plane = { path = "../control_plane", features = ["arrow-schema", "http-client", "iceberg-schema"] }
powdrr-query-core = { path = "../query_core" }
prost = "0.14.3"
redis = { version = "0.30.0" }
reqwest = { version = "0.12.14", default-features = false, features = ["json", "rustls-tls"] }
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.12.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_arrow = { version = "0.14.1", features = ["arrow-58"] }
serde_dynamo = { version = "4.2.14" }
serde_json = "1.0.140"
sha2 = "0.10.9"
tempfile = "3.20.0"
tokio = { version = "1.0", features = ["io-util", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ttl_cache = "0.5.1"
url = "2.5.4"
url-escape = "0.1.1"
uuid-b64 = "0.2.0"
lazy_static = "1.5.0"

[target.'cfg(target_os = "linux")'.dependencies]
liquid-cache-datafusion = { git = "https://github.com/XiangpengHao/liquid-cache", rev = "4597d1d1c434100031b00bd743c91d0c70b334d9" }
liquid-cache-parquet = { package = "liquid-cache-datafusion-local", git = "https://github.com/XiangpengHao/liquid-cache", rev = "4597d1d1c434100031b00bd743c91d0c70b334d9" }

[dev-dependencies]
mongodb = "3.3.0"
reqwest = { version = "0.12.14", default-features = false, features = ["json", "blocking", "rustls-tls"] }
