
[package]
name = "powdrr-query-lib"
description = "Powdrr.io shared query/runtime library"
keywords = ["arrow", "query", "sql"]
publish = false
readme = "../README.md"
version.workspace = true
edition.workspace = true

[dependencies]
arrow-array-55 = { package = "arrow-array", version = "55.1.0" }
arrow-ipc-55 = { package = "arrow-ipc", version = "55.1.0" }
arrow-json = "58.0.0"
chrono = "0.4.41"
datafusion = "53.1.0"
futures = "0.3.31"
futures-util = "0.3.31"
iceberg = { git = "https://github.com/apache/iceberg-rust", rev = "145afdf4b553e0f1b79d27b6cbf9b3af04f87e4e" }
iceberg-catalog-rest = { git = "https://github.com/apache/iceberg-rust", rev = "145afdf4b553e0f1b79d27b6cbf9b3af04f87e4e" }
idgenerator = "2.0.0"
lazy_static = "1.5.0"
lru-mem = "0.3.0"
object_store = { version = "0.13.2", default-features = false, features = ["aws", "http"] }
parquet-55 = { package = "parquet", version = "55.1.0" }
powdrr-control-plane = { path = "../control_plane", features = ["arrow-schema", "http-client", "iceberg-schema"] }
powdrr-query-core = { path = "../query_core" }
serde = { version = "1.0.219", features = ["derive"] }
serde_arrow = { version = "0.14.1", features = ["arrow-58"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tempfile = "3.20.0"
tokio = { version = "1.0", features = ["io-util", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.41"
url = "2.5.4"

[target.'cfg(target_os = "linux")'.dependencies]
liquid-cache-datafusion = { git = "https://github.com/XiangpengHao/liquid-cache", rev = "4597d1d1c434100031b00bd743c91d0c70b334d9" }
liquid-cache-parquet = { package = "liquid-cache-datafusion-local", git = "https://github.com/XiangpengHao/liquid-cache", rev = "4597d1d1c434100031b00bd743c91d0c70b334d9" }

[dev-dependencies]
serde_json = "1.0.140"
