[package]
name = "powdrr-query-runtime"
description = "Powdrr.io query runtime and orchestration"
keywords = ["arrow", "query", "runtime"]
publish = false
readme = "../README.md"
version.workspace = true
edition.workspace = true
autotests = false

[dependencies]
arrow-array-55 = { package = "arrow-array", version = "55.1.0" }
arrow-ipc = "58.0.0"
arrow-ipc-55 = { package = "arrow-ipc", version = "55.1.0" }
arrow-json = "58.0.0"
async-trait = "0.1.88"
aws-config = { version = "1.8.3" }
aws-credential-types = { version = "1.2.4" }
aws-sdk-dynamodb = { version = "1.86.0" }
chrono = "0.4.41"
datafusion = "53.1.0"
futures = "0.3.31"
futures-util = "0.3.31"
gotham = { version = "0.7.4", features = ["rustls"] }
hmac = "0.12.1"
http = "0.2.12"
iceberg = { git = "https://github.com/apache/iceberg-rust", rev = "145afdf4b553e0f1b79d27b6cbf9b3af04f87e4e" }
idgenerator = "2.0.0"
k8s-openapi = { version = "0.25.0", features = ["latest"] }
kube = { version = "1.1.0", features = ["runtime", "derive"] }
lazy_static = "1.5.0"
memmap2 = "0.9.5"
mime = "0.3.17"
minijinja = "2.10.2"
modyne = { version = "0.3.0" }
modyne-derive = { version = "0.3.0" }
object_store = { version = "0.13.2", default-features = false, features = ["aws", "http"] }
parquet-55 = { package = "parquet", version = "55.1.0" }
paste = "1.0.15"
powdrr-control-plane = { path = "../control_plane", features = ["arrow-schema", "http-client", "iceberg-schema"] }
powdrr-query-core = { path = "../query_core" }
powdrr-query-lib = { path = "../query_lib" }
redis = { version = "0.30.0" }
reqwest = { version = "0.12.14", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_arrow = { version = "0.14.1", features = ["arrow-58"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1.0", features = ["io-util", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.41"
url-escape = "0.1.1"
uuid-b64 = "0.2.0"

[dev-dependencies]
mongodb = "3.3.0"
powdrr-query-server = { path = "../query_server" }
reqwest = { version = "0.12.14", default-features = false, features = ["json", "blocking", "rustls-tls"] }
tempfile = "3.20.0"

[[test]]
name = "local_cli_analyze"
path = "tests/local_cli_analyze.rs"
