[package]
name = "powdrr-query-server"
description = "Powdrr.io query server surfaces"
keywords = ["arrow", "query", "server"]
publish = false
readme = "../README.md"
version.workspace = true
edition.workspace = true

[dependencies]
bson = "2.15.0"
chrono = "0.4.41"
datafusion = "53.1.0"
futures = "0.3.31"
futures-util = "0.3.31"
gotham = { version = "0.7.4", features = ["rustls"] }
hmac = "0.12.1"
http = "0.2.12"
idgenerator = "2.0.0"
mime = "0.3.17"
powdrr-control-plane = { path = "../control_plane" }
powdrr-query-lib = { path = "../query_lib" }
serde = { version = "1.0.219", features = ["derive"] }
serde_arrow = { version = "0.14.1", features = ["arrow-58"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1.0", features = ["io-util", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.41"
uuid-b64 = "0.2.0"

[dev-dependencies]
tempfile = "3.23.0"
