[package]
name = "powdrr-query-server"
description = "Powdrr.io query server surfaces"
keywords = ["arrow", "query", "server"]
publish = false
readme = "../README.md"
version.workspace = true
edition.workspace = true
autotests = false

[features]
integration-tests = []

[dependencies]
bson = "2.15.0"
chrono = "0.4.41"
datafusion = "53.1.0"
futures = "0.3.31"
futures-util = "0.3.31"
gotham = { version = "0.7.4", features = ["rustls"] }
hmac = "0.12.1"
http = "0.2.12"
idgenerator = "2.0.0"
mime = "0.3.17"
powdrr-control-plane = { path = "../control_plane" }
powdrr-query-lib = { path = "../query_lib" }
powdrr-query-runtime = { path = "../query_runtime" }
serde = { version = "1.0.219", features = ["derive"] }
serde_arrow = { version = "0.14.1", features = ["arrow-58"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1.0", features = ["io-util", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.41"
uuid-b64 = "0.2.0"

[dev-dependencies]
aws-config = "1.8.3"
aws-credential-types = "1.2.4"
aws-sdk-dynamodb = "1.86.0"
mongodb = "3.3.0"
redis = "0.30.0"
reqwest = { version = "0.12.14", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
tempfile = "3.23.0"
url = "2.5.4"

[[test]]
name = "dynamodb_compatibility_matrix"
path = "tests/dynamodb_compatibility_matrix.rs"

[[test]]
name = "es_compatibility_matrix"
path = "tests/es_compatibility_matrix.rs"
required-features = ["integration-tests"]

[[test]]
name = "dynamodb_sdk_compat"
path = "tests/dynamodb_sdk_compat.rs"
required-features = ["integration-tests"]

[[test]]
name = "elasticsearch_js_client_compat"
path = "tests/elasticsearch_js_client_compat.rs"
required-features = ["integration-tests"]

[[test]]
name = "mongodb_wire_compat"
path = "tests/mongodb_wire_compat.rs"
required-features = ["integration-tests"]

[[test]]
name = "redis_wire_compat"
path = "tests/redis_wire_compat.rs"
required-features = ["integration-tests"]
