[package]
name = "powdrr-io-service"
description = "Powdrr.io Service"
keywords = ["arrow", "query", "sql"]
publish = false
readme = "README.md"
version.workspace = true
edition.workspace = true


[dependencies]
aws-config = "1.8.3"
aws-credential-types = "1.2.4"
aws-sdk-dynamodb = "1.86.0"
futures = "0.3.31"
futures-util = "0.3.31"
gotham = { version = "0.7.4", features = ["rustls"] }
idgenerator = "2.0.0"
modyne = "0.3.0"
modyne-derive = "0.3.0"
paste = "1.0.15"
powdrr_lib = { path = "../main_lib" }
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.12.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.45.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
