[package]
name = "powdrr-io-service"
description = "Powdrr.io Service"
keywords = ["arrow", "query", "sql"]
publish = false
readme = "README.md"
version.workspace = true
edition.workspace = true


[dependencies]
futures-util = "0.3.31"
gotham = { version = "0.7.4", features = ["rustls"] }
idgenerator = "2.0.0"
powdrr-service-lib = { path = "../service_lib" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.45.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
