[package]
name = "powdrr-io-service"
description = "Powdrr.io Service"
keywords = ["arrow", "query", "sql"]
publish = false
readme = "README.md"
version.workspace = true
edition.workspace = true


[dependencies]
futures-util = "0.3.31"
gotham = { version = "0.7.4", features = ["rustls"] }
idgenerator = "2.0.0"
openraft = { version = "0.9.24", features = ["serde"] }
openraft-memstore = "0.9.24"
powdrr-service-lib = { path = "../service_lib" }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = "1.45.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
tempfile = "3.23.0"
