[package]
name = "powdrr-service-lib"
description = "Powdrr.io service control-plane library"
publish = false
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.88"
aws-config = "1.8.3"
aws-credential-types = "1.2.4"
aws-sdk-dynamodb = "1.86.0"
chrono = "0.4.41"
idgenerator = "2.0.0"
minijinja = "2.10.2"
modyne = "0.3.0"
modyne-derive = "0.3.0"
openraft = { version = "0.9.24", features = ["serde"] }
openraft-memstore = "0.9.24"
paste = "1.0.15"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
